--- a/src/templates/screens/Confirm.vm
+++ b/src/templates/screens/Confirm.vm
@@ -52,7 +52,7 @@ $page.setTitle("Confirm Your Email Address")
     <input type="hidden" name="cancelTemplate" value="Login.vm">
     <input type="hidden" name="nextTemplate" value="Start.vm">
 
-#set ($user = $scarab.User)
+#set ($user = $scarabR.User)
 
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
  <tr>
