added an email mask for the login-username, and modified the url attribute value to allow an empty field.
give the url error message in Wizard3.vm and fix variable name in Login.vm.


another package change from turbine needed in TR.props



PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/screens/Login.vm
+++ b/src/templates/screens/Login.vm
@@ -53,7 +53,7 @@ $page.setTitle("Welcome to Scarab")
     #end
 
    <input name= "$login.Username.Key"
-        value="$!attrInput.Username.Value" size="25" type="text">
+        value="$!login.Username.Value" size="25" type="text">
 
 <!--
                 <INPUT name="Email" value="$!data.Parameters.Email" TYPE="text" SIZE="25">
