Links.vm: / doesn't seem to work. i get a "horrible exception"
Wizard1.vm/GlobalMacros.vm moved one of the macros' into a global because
i'm re-using it in another template i'm working on. i also modified it to
be a bit more flexible in that it now sets the size= attribute to the
<select> box.

-jon

--- a/src/templates/screens/Links.vm
+++ b/src/templates/screens/Links.vm
@@ -13,10 +13,10 @@ $page.setTitle("Scarab Links")
 <li><a href="$link.setPage("Register.vm")">Register.vm</a>
 <li><a href="$link.setPage("RegisterConfirm.vm")">RegisterConfirm.vm</a>
 
-<li><a href="$link.setPage("entry/Wizard1.vm")">EnterIssue.vm</a>
-<li><a href="$link.setPage("entry/Wizard2.vm")">EnterIssue2.vm</a>
-<li><a href="$link.setPage("entry/Wizard3.vm")">EnterIssue3.vm</a>
-<li><a href="$link.setPage("entry/Wizard4.vm")">EnterIssue4.vm</a>
+<li><a href="$link.setPage("entry,Wizard1.vm")">EnterIssue.vm</a>
+<li><a href="$link.setPage("entry,Wizard2.vm")">EnterIssue2.vm</a>
+<li><a href="$link.setPage("entry,Wizard3.vm")">EnterIssue3.vm</a>
+<li><a href="$link.setPage("entry,Wizard4.vm")">EnterIssue4.vm</a>
 <li><a href="$link.setPage("Search.vm")">Search.vm</a>
 <li><a href="$link.setPage("Start.vm")">Start.vm</a>
 <li><a href="$link.setPage("Start2.vm")">Start2.vm</a>
