--- a/src/templates/screens/entry/Wizard3.vm
+++ b/src/templates/screens/entry/Wizard3.vm
@@ -1,128 +1,34 @@
-#set ( $action = $link.setPage("entry/Wizard3.vm").setAction("ReportIssue").addPathInfo("nextTemplate", "entry/Wizard4.vm") )
+#set ( $action = $link.setPage("entry,Wizard3.vm").setAction("ReportIssue").addPathInfo("nextTemplate", "entry,Wizard4.vm") )
 #set ($user = $scarabR.User)
 #set ($module = $user.CurrentModule)
 #set ($issue = $user.ReportingIssue)
 
 
-  <FORM METHOD="get" NAME="Report3Form" action="$action">
-  <TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0" WIDTH="100%">
-    <TR>
-      <TD>
+<FORM METHOD="get" NAME="Report3Form" action="$action">
 
-      </TD>
-    </TR>
-    <TR>
-      <TD HEIGHT="1" BGCOLOR="#000000"><SPACER TYPE="block" HEIGHT="1"></TD>
-    </TR>
-</TABLE>
-<P>
-<!-- current project and login -->
-  <TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0" WIDTH="100%">
-    <TR>
-      <TD BGCOLOR="#FFFFFF" HEIGHT="1"><SPACER HEIGHT="1" TYPE="block"></TD>
-      <TD ALIGN="right" NOWRAP CLASS="PlainText">Logged in: <A HREF="/">jon 123</A></TD>
-    </TR>
-  </TABLE>
-<!-- end current project and login -->
-
-<!-- enter info -->
-  <TABLE BORDER="0" CELLPADDING="2" CELLSPACING="0" WIDTH="100%">
-    <TR>
-      <TD NOWRAP CLASS="Header" BGCOLOR="#999999">REPORT AN ISSUE: STEP 3</TD>
-    </TR>
-    <TR>
-      <TD CLASS="SectionHeader" BGCOLOR="#CCCCCC">Current Issue Information
-</TD>
-    </TR>
-  </TABLE>
-
-  <TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0" WIDTH="100%">
- <tr>
-  <td valign="top" class="TableDataHeader">Project:</td>
-  <td valign="top" class="TableData">Scarab</td>
-  <td valign="top">&nbsp;</td>
-  <td valign="top" class="TableDataHeader">Component:</td>
-  <td valign="top" class="TableData">Viewer</td>
- </tr>
- <tr>
-  <td height="2" colspan="5"><spacer type="block" height="2"></td>
- </tr>
- <tr>
-  <td height="1" colspan="5" bgcolor="#cccccc"><spacer type="block" height="1"></td>
- </tr>
- <tr>
-  <td valign="top" class="TableDataHeader">Type:</td>
-  <td valign="top" class="TableData">Feature</td>
-  <td valign="top">&nbsp;</td>
-  <td valign="top" class="TableDataHeader">Version:</td>
-  <td valign="top" class="TableData">Beta1</td>
- </tr>
- <tr>
-  <td height="2" colspan="5"><spacer type="block" height="2"></td>
- </tr>
- <tr>
-  <td height="1" colspan="5" bgcolor="#cccccc"><spacer type="block" height="1"></td>
- </tr>
- <tr>
-  <td valign="top" class="TableDataHeader">Platform:</td>
-  <td valign="top" class="TableData">
-
+Platform:
           #attrValueErrorMsg ( $issue "PLATFORM" )
-          #attrValueSelect ($issue "PLATFORM")
+          #attrValueSelect ($issue "PLATFORM" "")
 
+<p>
 
-  </td>
-  <td valign="top">&nbsp;</td>
-  <td valign="top" class="TableDataHeader">OS:</td>
-  <td valign="top" class="TableData">
+OS:
           #attrValueErrorMsg ( $issue "OPERATING SYSTEM" )
-          #attrValueSelect ($issue "OPERATING SYSTEM")
-  </td>
- </tr>
- <tr>
-  <td height="2" colspan="5"><spacer type="block" height="2"></td>
- </tr>
- <tr>
-  <td height="1" colspan="5" bgcolor="#cccccc"><spacer type="block" height="1"></td>
- </tr>
- <tr>
-  <td height="2" colspan="5"><spacer type="block" height="2"></td>
- </tr>
- <tr>
-  <td valign="top" class="TableDataHeader">Summary:</td>
-  <td valign="top" colspan="4" class="TableData">
+          #attrValueSelect ($issue "OPERATING SYSTEM" "")
 
-    #attrValueErrorMsg( $issue "SUMMARY" )<br>
+<p>
+
+Summary:
+    #attrValueErrorMsg( $issue "SUMMARY"  )<br>
     #set ( $attrValue = $issue.AllAttributeValuesMap.get("SUMMARY") )
     #set ( $attrInput = $intake.AttributeValue.mapTo($attrValue) ) 
    <input type="hidden" name="$attrInput.CID" value="$attrInput.OID">
    <input name= "$attrInput.Value.Key"
         value="$!attrInput.Value.Value" size="20" type="text">
 
-</td>
- </tr>
- <tr>
-  <td height="2" colspan="5"><spacer type="block" height="2"></td>
- </tr>
- <tr>
-  <td height="1" colspan="5" bgcolor="#cccccc"><spacer type="block" height="1"></td>
- </tr>
- <tr>
-  <td height="2" colspan="5"><spacer type="block" height="2"></td>
- </tr>
-  </TABLE>
-<!-- end enter info-->
 <p>
-<!-- enter info -->
-  <TABLE BORDER="0" CELLPADDING="2" CELLSPACING="0" WIDTH="100%">
-    <TR>
-      <TD COLSPAN="6" WIDTH="100%" CLASS="SectionHeader" BGCOLOR="#CCCCCC">Enter Issue Information</TD>
-    </TR>
-    <TR>
-      <TD ALIGN="right" VALIGN="top">
-        <SPAN CLASS="SectionHeader">URL:
-      </TD>
-      <TD COLSPAN="3">
+
+URL:
 
     #set ( $attrValue = $issue.ModuleAttributeValuesMap.get("URL") )
     #set ( $attrInput = $intake.AttributeValue.mapTo($attrValue) ) 
@@ -133,13 +39,9 @@
    <input name= "$attrInput.Url.Key"
         value="$!attrInput.Url.Value" size="30" type="text">
 
-      </TD>
-    </TR>
-    <TR>
-      <TD ALIGN="right" VALIGN="top">
-        <SPAN CLASS="SectionHeader">Description:
-      </TD>
-      <TD COLSPAN="3">
+<p>
+
+Description:
 
     #attrValueErrorMsg( $issue "DESCRIPTION" )<br>
     #set ( $attrValue = $issue.ModuleAttributeValuesMap.get("DESCRIPTION") )
@@ -148,22 +50,8 @@
    <textarea name= "$attrInput.Value.Key" cols="40" 
            rows="5">$!attrInput.Value.Value</textarea>
 
-      </TD>
-    </TR>
-    <TR>
-      <TD>&nbsp;</TD>
-      <TD>
+<p>
+
             <input type="submit" 
                 name="eventSubmit_doEnterissue" value="Submit Issue">
-        </FORM>
-      </TD>
-    </TR>
-    <TR>
-      <TD COLSPAN="6">
-        <TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0" WIDTH="100%">
-          <TR><TD BGCOLOR="#CCCCCC" HEIGHT="1"><SPACER
-HEIGHT="1" TYPE="block"></TD></TR></TABLE>
-      </TD>
-    </TR>
-  </TABLE> 
-  </FORM> 
+</FORM>
